--- a/Index.html
+++ b/Index.html
@@ -46,6 +46,8 @@
 
     <h1>Feedback</h1>
     <p>Our Founder of Assuvar is good in programming core</p>
+        <h1>Feedback</h1>
+    <p>Our Founder of Assuvar is good in programming core</p>
 
     
 </body>
